# CPP_Neural_Network

./: .gitignore  CMakeLists.txt  README.md  log.txt  main
src/: Value.cpp  Value.hpp  learn_xor.cpp  main.cpp  test.cpp
src/engine/: CrossEntropyLoss.cpp  DenseLayer.cpp  LeakyRelu.cpp  MeanSquaredErrorLoss.cpp  Neuron.cpp  ReLuLayer.cpp  SigmoidLayer.cpp  SoftmaxLayer.cpp
src/util/: print_vector.cpp  random.cpp
